[tool.poetry]
name = "anki-export"
version = "0.1.1"
description = "Export your Anki *.apkg to Python. Read Anki *.apkg in Python."
authors = ["patarapolw <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["anki"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pyexcel-xlsxwx = "^0.1.7"
