[tool.poetry]
name = "anki-export"
version = "0.1.3"
description = "Export your Anki *.apkg to Python. Read Anki *.apkg in Python."
authors = ["patarapolw <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["anki"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pyexcel-xlsxwx = "^0.1.8"
pytest = "^7.0.0"
black = {version = "^22.1.0", allow-prereleases = true}
