[tool.poetry]
name = "blank-install"
version = "0.1.0"
description = ""
authors = ["Pacharapol Withayasakpunt <polv@polv.cc>"]

[tool.poetry.dependencies]
python = "^3.7"
anki-export = "^0.1.2"
pyexcel-xlsxwx = "^0.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
